Annotating models and routes.

--- a/test/fixtures/rooms.yml
+++ b/test/fixtures/rooms.yml
@@ -1,3 +1,21 @@
+# == Schema Information
+#
+# Table name: rooms
+#
+#  id                       :integer          not null, primary key
+#  name                     :string
+#  max_occupancy            :integer
+#  room_number              :integer
+#  imgurl                   :string
+#  location                 :string
+#  company_id               :integer
+#  meetings_count           :integer          default(0)
+#  available                :boolean          default(TRUE)
+#  hours_until_next_meeting :integer          default(-1)
+#  created_at               :datetime         not null
+#  updated_at               :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
